# Zone-Equalisation-Normalisation

./: ChangeLog.txt  README.md  pyproject.toml
data/: A375_TTseq_BAM_URLs.txt  Erythroid_ATAC_BAM_URLs.txt  Erythroid_ATAC_bigWig_URLs.txt  Erythroid_RAD21_BAM_URLs.txt  HeLA_TTseq_BAM_URLs.txt  mESC_ATAC_bigWig_URLs.txt
environment/: zen_env.yml
notebooks/: ZEN_Tutorial.ipynb
src/ZEN_norm/: __init__.py  chrom_analysis.py  compare_norm.py  reverse_norm.py  zone_norm.py
src/ZEN_norm_test/: __init__.py  norm_compare.py  zone_norm.py
tests/: ZoneNorm_Test.ipynb
tests/data/: HeLA_TTseq_bigWig_URLs.txt
tests/notebooks/: ReverseNorm_Test.ipynb  Supplementary_Figures.ipynb  ZoneNorm_Test.ipynb
tutorials/: README.md
tutorials/diffbind/: DiffBind_Analysis.Rmd  DiffBind_Analysis.nb.html
tutorials/supplementary_figures/: README.md  Supplementary_Figures.ipynb
tutorials/zen_tutorial/: README.md  ZEN_Tutorial.ipynb
tutorials/zen_tutorials/: CompareNorm_Tutorial.ipynb  ReverseNorm_Tutorial.ipynb  ZEN_Tutorial.ipynb
